<resources>
    <string name="messageapp">MessageApp</string>
    <string name="app_name">MessageApp</string>

    <string name="no_app_available_to_open_privacy_policy_url">No app available to open privacy policy URL</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_permission_is_required_for_the_app_to_function_properly_please_enable_it_in_the_app_settings">This permission is required for the app to function properly. Please enable it in the app settings.</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="start_chat">START CHAT</string>
    <string name="no_messages_yet_start_a_chat">No messages yet. Start a chat!</string>
    <string name="no_archived_conversations">No archived conversations.</string>
    <string name="select_a_contact_to_chat">Select a contact to chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="online">Online</string>
    <string name="last_seen">Last seen %1$s</string>
    <string name="offline">Offline</string>
    <string name="no_phone_number_available">No phone number available</string>
    <string name="contact_details_coming_soon">Contact details coming soon</string>
    <string name="message_failed">Message failed</string>
    <string name="messages">Messages</string>
    <string name="archived">Archived</string>
    <string name="scheduled">Scheduled</string>
    <string name="blocked">Blocked</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="settings">Settings</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="info">Info</string>
    <string name="language">Language</string>
    <string name="app_language">App language</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="theme">Theme</string>
    <string name="font_size">Font Size</string>
    <string name="text_size">Text size</string>
    <string name="swipe_actions">Swipe Actions</string>
    <string name="swipe_behaviour">Swipe behaviour</string>
    <string name="after_call_feature">After Call Feature</string>
    <string name="show_post_call_actions">Show post-call actions</string>
    <string name="support">Support</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="check_out_this_messaging_app">Check out this messaging app!</string>
    <string name="swipe_action">Swipe action</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="choose_one">Choose One</string>
    <string name="system_mode">System Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="add">Add</string>
    <string name="right_swipe">Right Swipe</string>
    <string name="left_swipe">Left Swipe</string>
    <string name="change">Change</string>
    <string name="change_action">Change action</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="block">Block</string>
    <string name="none">None</string>

    <string name="unarchive">Unarchive</string>
    <string name="more">More</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="mark_unread">Mark as unread</string>
    <string name="mark_read">Mark as read</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra large</string>
</resources>