<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_main_toolbar"
        android:id="@+id/incToolbar"/>

    <TextView
        android:id="@+id/view_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/no_archived_conversations"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textSize="@dimen/text_body"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_archived"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="1"
        tools:listitem="@layout/item_conversation" />

    <LinearLayout
        android:id="@+id/layout_bottom_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="?android:attr/windowBackground"
        android:elevation="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/action_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_delete"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="?attr/colorControlNormal"
            app:drawableTint="?attr/colorControlNormal" />

        <TextView
            android:id="@+id/action_unarchive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_unarchive"
            android:gravity="center"
            android:text="@string/unarchive"
            android:textColor="?attr/colorControlNormal"
            app:drawableTint="?attr/colorControlNormal" />

    </LinearLayout>

</LinearLayout>

