<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgMain"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingActivity">

    <include
        android:id="@+id/incToolbar"
        layout="@layout/include_main_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/language"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/theme_mode"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llSwipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/swipe_action"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llFontSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/font_size"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llAfterCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/after_call_feature"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/rate"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/share"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>